--- a/app/views/task_lists/show.html.erb
+++ b/app/views/task_lists/show.html.erb
@@ -2,4 +2,4 @@
 <p><%= @task_list.description %></p>
 
 <%= link_to 'Edit', edit_task_list_path(@task_list) %> |
-<%= link_to 'Back', task_list_path %>
+<%= link_to 'Back', task_lists_path %>
