add project, user sessions

--- a/app/views/task_lists/show.html.erb
+++ b/app/views/task_lists/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @task_list.name %></h1>
 <p><%= @task_list.description %></p>
 
-<%= link_to 'Edit', edit_task_list_path(@task_list) %> |
-<%= link_to 'Back', task_lists_path %>
+<%= link_to 'Edit', edit_user_task_list_path(@user, @task_list) %> |
+<%= link_to 'Back', user_task_lists_path %>
