--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', [@task_list, @task] %> |
-<%= link_to 'Back', task_list_task_path %>
+<%= link_to 'Show', [@user, @task_list, @task] %> |
+<%= link_to 'Back', user_task_list_task_path %>
