--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for [@user, @task_list] do |f| %>
-  <% if @task_list.errors.any? %>
+<%= form_for [@user, @project] do |f| %>
+  <% if @project.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@task_list.errors.count, "error") %> prohibited this task list from being saved:</h2>
+      <h2><%= pluralize(@project.errors.count, "error") %> prohibited this task list from being saved:</h2>
 
       <ul>
-      <% @task_list.errors.full_messages.each do |msg| %>
+      <% @project.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
