--- a/app/views/task_lists/index.html.erb
+++ b/app/views/task_lists/index.html.erb
@@ -2,14 +2,14 @@
 <div id="task_list">
   <% @task_lists.each do |task_list| %>
     <div class="item">
-        <div class="name"> <%= link_to "#{task_list.name}",  task_list_tasks_path(task_list)%></div>
+        <div class="name"> <%= link_to "#{task_list.name}",  user_task_list_tasks_path(@user, task_list)%></div>
         <div class="description"><%= task_list.description %></div>
         <div class="operations">
-          <%= link_to 'Edit', edit_task_list_path(task_list) %>
-          <%= link_to 'Destroy', task_list, confirm: 'Are you sure?', method: :delete %>
-          <%= link_to 'Tasks', task_list_tasks_path(task_list) %>
+          <%= link_to 'Edit', edit_user_task_list_path(@user, task_list) %>
+          <%= link_to 'Destroy', [@user, task_list], confirm: 'Are you sure?', method: :delete %>
+          <%= link_to 'Tasks', user_task_list_tasks_path(@user, task_list) %>
         </div>
     </div>
   <% end %>
 </div>
-<%= link_to 'New task list', new_task_list_path %>
+<%= link_to 'New task list', new_user_task_list_path(@user) %>
