--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,4 +1,4 @@
-<div id="state"><%= link_to 'Done', task_list_tasks_url+'/done' %> <%= link_to 'In process', task_list_tasks_url+'/inprocess' %> <%= link_to 'Not done', task_list_tasks_url+'/notdone' %></div>
+<div id="state"><%= link_to 'All', user_task_list_tasks_url %> <%= link_to 'Done', user_task_list_tasks_url+'/done' %> <%= link_to 'In process', user_task_list_tasks_url+'/inprocess' %> <%= link_to 'Not done', user_task_list_tasks_url+'/notdone' %></div>
 <h1>All tasks</h1>
 <ul id="task">
   <% @tasks.each do |task| %>
@@ -11,12 +11,11 @@
                                     'middle'
                                 else
                                     'high'
-                                end
-                            %>"><%= task.priority %></span>
-      <%= link_to "#{task.state}", change_state_task_list_task_url(@task_list, task) %>
-      <%= link_to 'Edit', edit_task_list_task_url(@task_list, task) %>
-      <%= link_to 'Destroy', [@task_list, task], confirm: 'Are you sure?', method: :delete %>
+                                end %>"><%= task.priority %></span>
+      <%= link_to "#{task.state}", change_state_user_task_list_task_url(@user, @task_list, task) %>
+      <%= link_to 'Edit', edit_user_task_list_task_url(@user, @task_list, task) %>
+      <%= link_to 'Destroy', [@user, @task_list, task], confirm: 'Are you sure?', method: :delete %>
     </li>
   <% end %>
 </ul>
-<%= link_to 'New task', new_task_list_task_path %>
+<%= link_to 'New task', new_user_task_list_task_path %>
