--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', user_task_list_tasks_path %>
+<%= @project.nil?? link_to('Back', user_task_list_tasks_path) : link_to('Back', user_project_task_list_tasks_path) %>
