--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,12 +2,12 @@
 <div id="project">
   <% @projects.each do |project| %>
     <div class="item">
-        <div class="name"> <%= link_to "#{project.name}",  user_projects_path(@user, project)%></div>
+        <div class="name"> <%= link_to "#{project.name}",  user_project_task_lists_path(@user, project)%></div>
         <div class="description"><%= project.description %></div>
         <div class="operations">
           <%= link_to 'Edit', edit_user_project_path(@user, project) %>
           <%= link_to 'Destroy', [@user, project], confirm: 'Are you sure?', method: :delete %>
-          <%= link_to 'Tasks', user_projects_path(@user, project) %>
+          <%= link_to 'Tasks', user_project_task_lists_path(@user, project) %>
         </div>
     </div>
   <% end %>
