--- a/app/views/task_lists/new.html.erb
+++ b/app/views/task_lists/new.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', user_task_lists_path %>
+
+<%= @project.nil?? link_to('Back', user_task_lists_path) : link_to('Back', user_project_task_lists_path) %>
