--- a/app/views/task_lists/show.html.erb
+++ b/app/views/task_lists/show.html.erb
@@ -1,5 +1,10 @@
 <h1><%= @task_list.name %></h1>
 <p><%= @task_list.description %></p>
 
-<%= link_to 'Edit', edit_user_task_list_path(@user, @task_list) %> |
-<%= link_to 'Back', user_task_lists_path %>
+<% if !@project.nil? %>
+    <%= link_to 'Edit', edit_user_project_task_list_path(@user, @project, @task_list) %> |
+    <%= link_to 'Back', user_project_task_lists_path %>
+<% else %>
+    <%= link_to 'Edit', edit_user_task_list_path(@user, @task_list) %> |
+    <%= link_to 'Back', user_task_lists_path %>
+<% end %>
