--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,5 +2,10 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', [@user, @task_list, @task] %> |
-<%= link_to 'Back', user_task_list_task_path %>
+<% if !@project.nil? %>
+    <%= link_to 'Show', [@user, @project, @task_list, @task] %> |
+    <%= link_to 'Back', user_project_task_list_task_path %>
+<% else %>
+    <%= link_to 'Show', [@user, @task_list, @task] %> |
+    <%= link_to 'Back', user_task_list_task_path %>
+<% end %>
