--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,5 +3,10 @@
 <p><%= @task.priority %></p>
 <p><%= @task.state %></p>
 
-<%= link_to 'Edit', edit_user_task_list_task_path(@user, @task_list, @task) %> |
-<%= link_to 'Back', user_task_list_tasks_path %>
+<% if !@project.nil? %>
+    <%= link_to 'Edit', edit_user_project_task_list_task_path(@user, @project, @task_list, @task) %> |
+    <%= link_to 'Back', user_project_task_list_tasks_path %>
+<% else %>
+    <%= link_to 'Edit', edit_user_task_list_task_path(@user, @project, @task_list, @task) %> |
+    <%= link_to 'Back', user_task_list_tasks_path %>
+<% end %>
