--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -133,7 +133,18 @@ footer nav {
     margin: 0 0 10px 0;
 }
 
+#project .name{
+    font-size: 16px;
+    font-weight: bold;
+    margin: 0 0 10px 0;
+}
+
 #task_list .name a{
+    color: #222;
+    text-decoration: underline;
+}
+
+#project .name a{
     color: #222;
     text-decoration: underline;
 }
@@ -155,6 +166,7 @@ footer nav {
 #task .name{
     font-weight: bold;
 }
+
 #task .priority_low{
     color: #006600;
 }
