--- a/app/views/projects/peoples.html.haml
+++ b/app/views/projects/peoples.html.haml
@@ -7,7 +7,8 @@
     = @owner.email
   - @peoples.each do |people|
     %li
-      %b = people.name
+      %b
+        = people.name
       \-
       = people.email
       = link_to 'Destroy', project_path+'/rempeople/'+people.id.to_s, confirm: 'Are you sure?', method: :delete
