pages signin, sigout; top right links

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -20,6 +20,7 @@ section {
   font-size: 120%;
   padding: 20px;
   background: #fff;
+  margin: 0 40px;
 }
 
 section h1 {
@@ -46,6 +47,7 @@ a:visited {
 
 nav {
   float: right;
+  margin-right: 40px;
 }
 
 nav {
@@ -91,6 +93,15 @@ a.signup_button {
   font-size: 150%;
   font-weight: bold;
   padding: 20px;
+}
+
+a.signup {
+    margin-left: 100px;
+}
+
+#signin{
+    width: 280px;
+    margin: 0 auto;
 }
 
 /* Round corners */
