--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -3,4 +3,4 @@
 - else
   %h1
     Todo list
-    = link_to "Sign up now!", signup_path, :class => "signup_button round"
+  = render('sessions/signin')
