--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -4,21 +4,7 @@
     of project
     = @project.name
 #task_list
-- @task_lists.each do |task_list|
-  .item
-    .name
-      = link_to "#{task_list.name}",  task_list_tasks_path(task_list)
-    .description
-      = task_list.description
-    .operations
-    - if !@project.nil?
-      = link_to 'Edit', edit_task_list_path(task_list)
-      = link_to 'Destroy', task_list, confirm: 'Are you sure?', method: :delete
-      = link_to 'Tasks', task_list_tasks_path(task_list)
-    - else
-      = link_to 'Edit', edit_task_list_path(task_list)
-      = link_to 'Destroy', task_list, confirm: 'Are you sure?', method: :delete
-      = link_to 'Tasks', task_list_tasks_path(task_list)
+  = render('shared/task_lists_item')
 - if !@project.nil?
   = link_to('New task list', new_project_task_list_path)
 - else
