cucumber last blueprint

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,8 @@
 !!! 5
 %html
   %head
-    %title title
+    %title
+      = title
     = csrf_meta_tag
     = render 'layouts/stylesheets'
     = javascript_include_tag 'application'
