--- a/app/views/layouts/_stylesheets.html.haml
+++ b/app/views/layouts/_stylesheets.html.haml
@@ -2,9 +2,6 @@
   %script{:type => "text/javascript",
         :src => "http://html5shiv.googlecode.com/svn/trunk/html5.js"}
 /[endif]
-= stylesheet_link_tag 'blueprint/screen', :media => 'screen'
-= stylesheet_link_tag 'blueprint/print',  :media => 'print'
-/[if lt IE 8]
-  = stylesheet_link_tag 'blueprint/ie'
-/[endif]
+= stylesheet_link_tag 'bootstrap'
+= stylesheet_link_tag 'bootstrap-responsive'
 = stylesheet_link_tag 'custom', :media => 'screen'
