--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -1,21 +1,19 @@
-= form_for [@project] do |f|
-  - if @project.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@project.errors.count, "error")
-        prohibited this task list from being saved:
-      %ul
+- if @project.errors.any?
+  #error_explanation
+    %b
+      = pluralize(@project.errors.count, "error")
+    %p
+      There were problems with the following fields:
+    %ul
       - @project.errors.full_messages.each do |msg|
         %li
           = msg
+= form_for([@project], html: {class: 'well'} )do |f|
   .field
     = f.label :name
-    %br
     = f.text_field :name
-
   .field
     = f.label :description
-    %br
     = f.text_area :description
   .actions
-    = f.submit
+    = f.submit(class: 'btn-primary')
