--- a/app/views/shared/_project_task_list_item.html.haml
+++ b/app/views/shared/_project_task_list_item.html.haml
@@ -1,5 +1,6 @@
-=  link_to('New project', new_project_path)
-|
-= link_to('New task list', new_task_list_path)
+%h3
+  Projects
 = render 'shared/projects_item'
+%h3
+  Task lists out the projects
 = render 'shared/task_lists_item'
