--- a/app/views/shared/_projects_item.html.haml
+++ b/app/views/shared/_projects_item.html.haml
@@ -1,12 +1,19 @@
-#project
-  - @projects_item.each do |project|
-    .item
-      .name
-        = link_to "#{project.name}",  project_task_lists_path(project)
-      .description
-        = project.description
-      .operations
-        = link_to 'Edit', edit_project_path(project)
-        = link_to 'Destroy', [project], confirm: 'Are you sure?', method: :delete
-        = link_to 'Tasks lists', project_task_lists_path(project)
-        = link_to 'Peoples', peoples_project_url(project)
+.row
+  #project
+    - @projects_item.each do |project|
+      .span4
+        .item
+          .name
+            = link_to "#{project.name}",  project_task_lists_path(project)
+          .description
+            = project.description
+          .operations
+            %i.icon-edit
+            = link_to 'Edit', edit_project_path(project)
+            %i.icon-remove
+            = link_to 'Destroy', [project], confirm: 'Are you sure?', method: :delete
+            %i.icon-list-alt
+            = link_to 'Tasks lists', project_task_lists_path(project)
+            %i.icon-user
+            = link_to 'Peoples', peoples_project_url(project)
+
