--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,15 +1,29 @@
 %header
-  %nav.round
-    %ul
-      %li
-        = link_to "Home", root_path
+  .span12
+    .menu
+      .btn-group.fl_left
+        = link_to "Home", root_path, class: 'btn'
+        - if signed_in?
+          = link_to "Projects", projects_path, class: 'btn'
+          = link_to "Task lists", task_lists_path, class: 'btn'
+          = link_to "Sign out", signout_path, :method => :delete, class: 'btn'
+        - else
+          = link_to "Sign in", signin_path, class: 'btn'
+          = link_to "Sign up", signup_path, class: 'btn'
       - if signed_in?
-        %li
-          = link_to "Projects", projects_path
-        %li
-          = link_to "Task lists", task_lists_path
-        %li
-          = link_to "Sign out", signout_path, :method => :delete
-      - else
-        %li
-          = link_to "Sign in", signin_path
+        .btn-group.fl_left
+          != '<a class="btn btn-primary" href="#">Create</a>'
+          != '<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">'
+          %span.caret
+          != '</a>'
+          %ul.dropdown-menu
+            %li
+              = link_to "Project", new_project_path
+            %li
+              - if !@project.nil? and controller.action_name != 'new' and controller.action_name != 'create'
+                = link_to("Task list", new_project_task_list_path(@project))
+              - else
+                = link_to("Task list", new_task_list_path)
+            - if controller.controller_name == 'tasks'
+              %li
+                = link_to "Task", new_task_list_task_path
