--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,11 +7,12 @@
     = render 'layouts/stylesheets'
     = javascript_include_tag 'application'
   %body
-    #container
+    .container
       = render 'layouts/header'
-      %section.round
-        - flash.each do |key, value|
-          = content_tag :div, value, :id => "flash_#{key}" if value.is_a?(String)
-        = yield
+      .row
+        .span4.offset4.flash_msg
+          - flash.each do |key, value|
+            = content_tag :div, value, :id => "flash_#{key}" if value.is_a?(String)
+      = yield
       = render 'layouts/footer'
       = debug(params) if Rails.env.development?
