--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -2,6 +2,11 @@
   = render 'shared/error_messages'
   = render 'shared/project_task_list_item'
 - else
-  %h1
-    Todo list
-  = render('sessions/signin')
+  .row.title
+    %h2
+      Todo list
+    %i
+      Your task manager, that can handle your to-do list and manage team collaboration with other users.
+  .row
+    .span4.offset4
+      = render('sessions/signin')
