--- a/app/views/projects/edit.html.haml
+++ b/app/views/projects/edit.html.haml
@@ -1,6 +1,5 @@
-%h1
-  Editing project
-= render 'form'
-= link_to 'Show', @project
-|
-= link_to 'Back', projects_path
+.row
+  .span6.offset3
+    %h2
+      Editing project
+    = render 'form'
