--- a/app/views/projects/invite.html.haml
+++ b/app/views/projects/invite.html.haml
@@ -1,3 +1,6 @@
-=  form_tag(invite_project_url(@user), :method => :post) do
-  =  email_field_tag 'email'
-  =  button_tag "Invite to project"
+.row
+  .span3.offset4
+    =  form_tag(invite_project_url(@user), :method => :post, class: 'well') do
+      = label_tag 'Enter email for invite: '
+      = email_field_tag 'email'
+      = button_tag "Invite to project", class: 'btn'
