--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -1,4 +1,5 @@
-%h1
-  New project
-= render 'form'
-= link_to 'Back', projects_path
+.row
+  .span6.offset3
+    %h2
+      New project
+    = render 'form'
