--- a/app/views/task_lists/_form.html.haml
+++ b/app/views/task_lists/_form.html.haml
@@ -1,13 +1,14 @@
-= form_for [@project, @task_list] do |f|
-  - if @task_list.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@task_list.errors.count, "error")
-        prohibited this task list from being saved:
-      %ul
+- if @task_list.errors.any?
+  #error_explanation
+    %b
+      = pluralize(@task_list.errors.count, "error")
+    %p
+      There were problems with the following fields:
+    %ul
       - @task_list.errors.full_messages.each do |msg|
         %li
           = msg
+= form_for([@project, @task_list], html: {class: 'well'} )do |f|
   .field
     = f.label :name
     %br
@@ -17,4 +18,4 @@
     %br
     = f.text_area :description
   .actions
-    = f.submit
+    = f.submit(class: 'btn-primary')
