--- a/app/views/task_lists/new.html.haml
+++ b/app/views/task_lists/new.html.haml
@@ -1,4 +1,6 @@
-%h1
-  New task list
-= render 'form'
-= @project.nil?? link_to('Back', task_lists_path) : link_to('Back', project_task_lists_path)
+.row
+  .span6.offset3
+    %h2
+      New task list
+    = render 'form'
+    = @project.nil?? link_to('Back', task_lists_path) : link_to('Back', project_task_lists_path)
