--- a/app/views/tasks/edit.html.haml
+++ b/app/views/tasks/edit.html.haml
@@ -1,11 +1,5 @@
-%h1
-  Editing task
-  = render 'form'
-- if !@project.nil?
-  = link_to 'Show', [@task_list, @task]
-  |
-  = link_to 'Back', task_list_task_path
-- else
-  = link_to 'Show', [@task_list, @task]
-  |
-  = link_to 'Back', task_list_task_path
+.row
+  .span6.offset3
+    %h2
+      Editing task
+    = render 'form'
