--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -1,4 +1,5 @@
-%h1
-  New task
-= render 'form'
-= @project.nil?? link_to('Back', task_list_tasks_path) : link_to('Back', task_list_tasks_path)
+.row
+  .span6.offset3
+    %h2
+      New task
+    = render 'form'
