--- a/app/views/shared/_projects_item.html.haml
+++ b/app/views/shared/_projects_item.html.haml
@@ -15,5 +15,5 @@
             %i.icon-list-alt
             = link_to 'Tasks lists', project_task_lists_path(project)
             %i.icon-user
-            = link_to 'Peoples', peoples_project_url(project)
+            = link_to 'Peoples', users_project_url(project)
 
