refactor rspec controller project

--- a/app/views/shared/_projects.html.haml
+++ b/app/views/shared/_projects.html.haml
@@ -1,6 +1,6 @@
 .row
   #project
-    - @projects_item.each do |project|
+    - @projects.each do |project|
       .span4
         .item
           .name
