--- a/app/views/shared/_task_lists.html.haml
+++ b/app/views/shared/_task_lists.html.haml
@@ -1,6 +1,6 @@
 .row
   #task_list
-    - @task_lists_item.each do |task_list|
+    - @task_lists.each do |task_list|
       .span4
         .item
           .name
