--- a/app/views/shared/_projects_task_lists.html.haml
+++ b/app/views/shared/_projects_task_lists.html.haml
@@ -1,11 +1,11 @@
-- if @projects_item.count == 0 and @task_lists_item.count == 0
+- if @projects.count == 0 and @task_lists.count == 0
   %h3
     You do not have list of projects, create them by clicking the Create button at the top right!
 - else
   %h3
     Projects
-  = render 'shared/projects_item'
+  = render 'shared/projects'
   %h3
     Task lists out the projects
-  = render 'shared/task_lists_item'
+  = render 'shared/task_lists'
 
