--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -3,11 +3,11 @@
   - if !@project.nil?
     of project
     = @project.name
-- if !@project.nil?
+- if @project
   %p
     = @project.description
 #task_list
-  = render('shared/task_lists_item')
+  = render('shared/task_lists')
 - if !@project.nil?
   = link_to('New task list', new_project_task_list_path)
 - else
