--- a/app/views/tasks/index.html.haml
+++ b/app/views/tasks/index.html.haml
@@ -6,8 +6,8 @@
   .span4.task_menu
     = link_to 'All', task_list_tasks_url
     = link_to 'Done', task_list_tasks_url+'/done'
-    = link_to 'In process', task_list_tasks_url+'/inprocess'
-    = link_to 'Not done', task_list_tasks_url+'/notdone'
+    = link_to 'In process', task_list_tasks_url+'/in_process'
+    = link_to 'Not done', task_list_tasks_url+'/not_done'
 .row
   .span8.offset2
     %table.table.table-striped
@@ -24,7 +24,7 @@
           %th
             Operations
       - @tasks.each do |task|
-        = content_tag :tr, :class => "task_#{task.state == :'Done' ? 'done' : 'not_done'}" do
+        = content_tag :tr, :class => "task_#{task.state == :'done' ? 'done' : 'not_done'}" do
           %td
             %i
               = task.name
@@ -37,7 +37,8 @@
             =  !task.user.nil?? task.user.name : task.task_list.user.name
           %td.operations
             %i.icon-flag
-            = link_to "#{task.state}", change_state_task_list_task_url(@task_list, task)
+            - task.state == 'done' ? (state = 'Done') : (task.state == 'in_process' ? state = 'In process' : state = 'Not done')
+            = link_to "#{state}", change_state_task_list_task_url(@task_list, task)
             %br
             %i.icon-edit
             = link_to 'Edit', edit_task_list_task_url(@task_list, task)
