--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -7,6 +7,4 @@
       Todo list
     %i
       Your task manager, that can handle your to-do list and manage team collaboration with other users.
-  .row
-    .span4.offset4
-      = render('sessions/signin')
+  = render :file => 'devise/sessions/new'
