--- a/app/views/shared/_projects.html.haml
+++ b/app/views/shared/_projects.html.haml
@@ -8,10 +8,11 @@
           .description
             = project.description
           .operations
-            %i.icon-edit
-            = link_to 'Edit', edit_project_path(project)
-            %i.icon-remove
-            = link_to 'Destroy', [project], confirm: 'Are you sure?', method: :delete
+            - if can? :manage, project
+              %i.icon-edit
+              = link_to 'Edit', edit_project_path(project)
+              %i.icon-remove
+              = link_to 'Destroy', [project], confirm: 'Are you sure?', method: :delete
             %i.icon-list-alt
             = link_to 'Tasks lists', project_task_lists_path(project)
             %i.icon-user
